<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>org.w3id.scholarlydata</groupId>
  <artifactId>clodg2</artifactId>
  <version>1.0.0-SNAPSHOT</version>
  <packaging>jar</packaging>

  <name>cLODg2</name>
  <description>conference Linked Open Data generator</description>
  
  <prerequisites>
    <maven>3.0.3</maven>
  </prerequisites>

   <build>
    <plugins>
	  <!-- requires Java 8 -->
	  <plugin>
        <groupId>org.apache.maven.plugins</groupId>
		<artifactId>maven-enforcer-plugin</artifactId>
		<version>1.4.1</version>
        <executions>
          <execution>
            <id>enforce-java</id>
            <goals>
              <goal>enforce</goal>
            </goals>
            <configuration>
              <rules>
                <requireJavaVersion>
                  <message>Java 8 or higher is required to compile this module</message>
                  <version>1.8</version>
                </requireJavaVersion>
              </rules>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-clean-plugin</artifactId>
        <version>3.0.0</version>
        <configuration>
          <filesets>
            <fileset>
              <directory>.</directory>
              <includes>
                <include>datagen/**</include>
                <include>*.log</include>
              </includes>
            </fileset>
          </filesets>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-shade-plugin</artifactId>
        <version>2.4.3</version>
        <configuration>
	    <filters>
	        <filter>
	            <artifact>*:*</artifact>
	            <excludes>
	                <exclude>META-INF/*.SF</exclude>
	                <exclude>META-INF/*.DSA</exclude>
	                <exclude>META-INF/*.RSA</exclude>
	            </excludes>
	        </filter>
	    </filters>
	    <!-- Additional configuration. -->
	</configuration>
        <executions>
          <execution>
            <phase>package</phase>
            <goals>
              <goal>shade</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <version>3.0.0</version>
        <configuration>
          <archive>
            <manifest>
              <addClasspath>true</addClasspath>
              <mainClass>org.w3id.scholarlydata.clodg.Clodg</mainClass>
              <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
            </manifest>
          </archive>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.rat</groupId>
        <artifactId>apache-rat-plugin</artifactId>
        <version>0.12</version>
        <configuration>
          <excludes></excludes>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.5.1</version>
        <configuration>
          <source>1.8</source>
          <target>1.8</target>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-antrun-plugin</artifactId>
        <version>1.7</version>
        <configuration>
          <target>
            <property name="vm.args" value=""/>
            <java fork="true" jar="${project.build.directory}/${project.build.finalName}.jar"
                dir="${project.build.directory}">
              <jvmarg line="-Xmx1024m -XX:MaxPermSize=256M ${vm.args}"/>
            </java>
          </target>
        </configuration>
      </plugin>
    </plugins>
  </build>

  <dependencies>
  
    <!-- Jena -->
    <dependency>
		<groupId>org.apache.jena</groupId>
		<artifactId>jena-core</artifactId>
		<version>2.7.0-incubating</version>
	</dependency>
	
	<dependency>
		<groupId>org.apache.jena</groupId>
		<artifactId>jena-arq</artifactId>
		<version>2.9.0-incubating</version>
	</dependency>

  
    <!-- Jettison -->  
    <dependency>
	  <groupId>org.codehaus.jettison</groupId>
	  <artifactId>jettison</artifactId>
	  <version>1.1</version>
    </dependency>

   <!-- generic tax -->
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-api</artifactId>
      <version>1.6.4</version>
    </dependency>
    <dependency>
      <groupId>commons-io</groupId>
      <artifactId>commons-io</artifactId>
      <version>2.4</version>
    </dependency>
	<dependency>
		<groupId>commons-logging</groupId>
		<artifactId>commons-logging</artifactId>
		<version>1.1</version>
	</dependency>
    <dependency>
      <groupId>commons-lang</groupId>
      <artifactId>commons-lang</artifactId>
      <version>2.6</version>
    </dependency>
    
    <!-- OpenCSV -->
    <dependency>
	  <groupId>net.sf.opencsv</groupId>
	  <artifactId>opencsv</artifactId>
	  <version>2.3</version>
    </dependency>
    
    <!-- Apache Commons -->
    <dependency>
	  <groupId>org.apache.commons</groupId>
	  <artifactId>commons-lang3</artifactId>
	  <version>3.0</version>
    </dependency>
    <dependency>
		<groupId>commons-cli</groupId>
		<artifactId>commons-cli</artifactId>
		<version>1.3.1</version>
	</dependency>
	
	<!-- Saxon -->
	<dependency>
        <groupId>net.sf.saxon</groupId>
        <artifactId>Saxon-HE</artifactId>
        <version>9.4</version>
    </dependency>
            

	<!-- https://mvnrepository.com/artifact/com.google.guava/guava -->
	<dependency>
	    <groupId>com.google.guava</groupId>
	    <artifactId>guava</artifactId>
	    <version>20.0</version>
	</dependency>


    <!-- for tests -->
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.11</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-simple</artifactId>
      <version>1.6.1</version>
      <scope>test</scope>
    </dependency>

    <dependency>
        <groupId>de.fuberlin.wiwiss</groupId>
        <artifactId>d2rq</artifactId>
        <version>0.8.1</version>
        
    </dependency>
    
    <!-- HyperSQL -->
	<dependency>
    	<groupId>org.hsqldb</groupId>
    	<artifactId>hsqldb</artifactId>
    	<version>2.3.4</version>
	</dependency>
	
	<!-- Freemarker -->
	<dependency>
		<groupId>org.freemarker</groupId>
		<artifactId>freemarker</artifactId>
		<version>2.3.23</version>
	</dependency>
	
	<!-- Virtuoso2Jena provider -->
	<!-- dependency>
		<groupId>virtuoso</groupId>
		<artifactId>virt-jena</artifactId>
		<version>2.0.0</version>
	</dependency>
	
	<dependency>
		<groupId>virtuoso</groupId>
		<artifactId>virtjdbc</artifactId>
		<version>4.0.0</version>
	</dependency -->
	        
  </dependencies>
  
  <repositories>
    <repository>
      <id>clodg2-repo</id>
      <url>file://${basedir}/mvn_repo</url>
    </repository>
  </repositories>

</project>
